version/0.3/_sources/examples/run_python_script/01_ten_bar_truss.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/run_python_script/01_ten_bar_truss.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_run_python_script_01_ten_bar_truss.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_run_python_script_01_ten_bar_truss.py:


.. _ref_ten_bar_truss:

Ten bar truss
-------------

This example demonstrates how to to create an ARSM ten bar truss flow in batch mode.

First, the ``arsm_ten_bar_truss.py`` file is used to create an ARSM ten bar
truss flow. Then the ``ten_bar_modify_parameters.py`` and
``ten_bar_truss_lc2.py`` files are used to modify the flow. Lastly, the project is
executed and a copy of the project is saved to a desired location.

.. GENERATED FROM PYTHON SOURCE LINES 16-19

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform the required imports.

.. GENERATED FROM PYTHON SOURCE LINES 19-23

.. code-block:: default


    from ansys.optislang.core import Optislang
    import ansys.optislang.core.examples as examples


.. GENERATED FROM PYTHON SOURCE LINES 24-27

Create optiSLang instance
~~~~~~~~~~~~~~~~~~~~~~~~~
Create the optiSLang instance.

.. GENERATED FROM PYTHON SOURCE LINES 27-31

.. code-block:: default


    osl = Optislang()
    print(osl)


.. GENERATED FROM PYTHON SOURCE LINES 32-36

Get paths of example scripts and run them
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Get the paths of the example scripts and then run these
scripts.

.. GENERATED FROM PYTHON SOURCE LINES 36-45

.. code-block:: default


    paths1 = examples.get_files("arsm_ten_bar_truss")
    paths2 = examples.get_files("ten_bar_modify_parameters")
    paths3 = examples.get_files("ten_bar_truss_lc2")

    osl.run_python_file(paths1[0])
    osl.run_python_file(paths2[0])
    osl.run_python_file(paths3[0])


.. GENERATED FROM PYTHON SOURCE LINES 46-49

Run workflow
~~~~~~~~~~~~
Run the workflow created by the preceding scripts.

.. GENERATED FROM PYTHON SOURCE LINES 49-52

.. code-block:: default


    osl.start()


.. GENERATED FROM PYTHON SOURCE LINES 53-63

Optionally save project
~~~~~~~~~~~~~~~~~~~~~~~
If you want to save the project to some desired location,
uncomment and edit these lines:

.. code:: python

  path = r'<insert-desired-location>'
  osl.save_as(os.path.join(path, "test_project.opf"))


.. GENERATED FROM PYTHON SOURCE LINES 65-68

Stop and cancel project
~~~~~~~~~~~~~~~~~~~~~~~
Stop and cancel the project.

.. GENERATED FROM PYTHON SOURCE LINES 68-71

.. code-block:: default


    osl.dispose()


.. GENERATED FROM PYTHON SOURCE LINES 72-80

View generated workflow
~~~~~~~~~~~~~~~~~~~~~~~
This image shows the generated workflow.

.. image:: ../../_static/01_ten_bar_truss.png
 :width: 400
 :alt: Result of script.



.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.000 seconds)


.. _sphx_glr_download_examples_run_python_script_01_ten_bar_truss.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 01_ten_bar_truss.py <01_ten_bar_truss.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 01_ten_bar_truss.ipynb <01_ten_bar_truss.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
